Добавил ссылки в соцсети

--- a/index.html
+++ b/index.html
@@ -121,9 +121,15 @@
       <div class="main-footer__container">
         <div class="main-footer__social">
           <ul class="social-links">
-            <li class="social-link">Мы в Инстаграмме</li>
-            <li class="social-link">Мы в Фейсбуке</li>
-            <li class="social-link">Мы в Твиттере</li>
+            <li class="social-links__item">
+              <a class="social-link" href="#">Мы в Инстаграмме</a>
+            </li>
+            <li class="social-links__item">
+              <a class="social-link" href="#">Мы в Фейсбуке</a>
+            </li>
+            <li class="social-links__item">
+              <a class="social-link" href="#">Мы в Твиттере</a>
+            </li>
           </ul>
         </div>
         <div class="copyright">
