--- a/catalog.html
+++ b/catalog.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header class="main-header">
+      <h1 class="visualy-hidden">Итернет-магазин "Мишка"</h1>
       <a class="logo" href="index.html">
         <img class="logo__img" src="#" alt="Мишка">
       </a>
@@ -16,10 +17,10 @@
         <div class="main-menu__conteiner">
           <ul class="main-menu__list">
             <li class="main-menu__item">
-              <a href="#" class="main-menu__link">Каталог товаров</a>
+              <a class="main-menu__link">Каталог товаров</a>
             </li>
             <li class="main-menu__item">
-              <a href="#" class="main-menu__link">Вязание на заказ</a>
+              <a href="form.html" class="main-menu__link">Вязание на заказ</a>
             </li>
             <li class="main-menu__item">
               <a href="#" class="main-menu__link main-menu__link--search">Поиск по сайту</a>
