--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
         <img class="logo__img" src="#" alt="Мишка">
       </a>
       <nav class="main-menu main-menu--closed main-menu--nojs">
-        <button class="main-menu__toggle main-menu__toggle--close">Открыть меню</button>
+        <span class="main-menu__toggle main-menu__toggle--close"><!-- --></span>
         <div class="main-menu__conteiner">
           <ul class="main-menu__list">
             <li class="main-menu__item">
