Разметил бургер и кнопки слайдера при помощи span

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </ul>
     </section>
     <section class="reviews">
-      <div class="reviews__container slider">
+      <div class="reviews__container">
         <h2 class="reviews__title">Отзывы</h2>
         <div class="reviews__items">
           <blockquote class="reviews__item">
@@ -101,8 +101,8 @@
           </blockquote>
           <!-- Ещё слайды -->
         </div>
-        <button class="reviews__btn reviews__btn--prev" type="button">Следующий</button>
-        <button class="reviews__btn reviews__btn--next" type="button">Предыдущий</button>
+        <span class="reviews__btn reviews__btn--prev"><!-- --></span>
+        <span class="reviews__btn reviews__btn--next"><!-- --></span>
         <a class="reviews__write" href="#">Написать</a>
       </div>
     </section>
