--- a/form.html
+++ b/form.html
@@ -17,16 +17,16 @@
         <div class="main-menu__conteiner">
           <ul class="main-menu__list">
             <li class="main-menu__item">
-              <a href="catalog.html" class="main-menu__link">Каталог товаров</a>
+              <a class="main-menu__link" href="catalog.html">Каталог товаров</a>
             </li>
             <li class="main-menu__item">
               <a class="main-menu__link">Вязание на заказ</a>
             </li>
             <li class="main-menu__item">
-              <a href="#" class="main-menu__link main-menu__link--search">Поиск по сайту</a>
+              <a class="main-menu__link main-menu__link--search" href="#">Поиск по сайту</a>
             </li>
             <li class="main-menu__item cart">
-              <a href="#" class="main-menu__link main-menu__link--cart">Корзина: <span class="cart__state">пока пуста</span></a>
+              <a class="main-menu__link main-menu__link--cart" href="#">Корзина: <span class="cart__state">пока пуста</span></a>
             </li>
           </ul>
         </div>
