--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <header class="main-header">
       <h1 class="visualy-hidden">Итернет-магазин "Мишка"</h1>
       <a class="logo">
-        <img class="logo__img" src="#" alt="Мишка">
+        <img src="#" alt="Мишка">
       </a>
       <nav class="main-menu main-menu--closed main-menu--nojs">
         <span class="main-menu__toggle main-menu__toggle--close"><!-- --></span>
         <div class="main-menu__conteiner">
           <ul class="main-menu__list">
             <li class="main-menu__item">
-              <a href="catalog.html" class="main-menu__link">Каталог товаров</a>
+              <a class="main-menu__link" href="catalog.html">Каталог товаров</a>
             </li>
             <li class="main-menu__item">
-              <a href="form.html" class="main-menu__link">Вязание на заказ</a>
+              <a class="main-menu__link" href="form.html">Вязание на заказ</a>
             </li>
             <li class="main-menu__item">
-              <a href="#" class="main-menu__link main-menu__link--search">Поиск по сайту</a>
+              <a class="main-menu__link main-menu__link--search" href="#">Поиск по сайту</a>
             </li>
             <!-- Тут добавил еще один независимый блок cart, чтобы на него навесить логику смену состояния корзины,
                 может еще где-то пригодится.
                 А внешний вид конкретно для меню - это main-menu__item и main-menu__link.
             -->
             <li class="main-menu__item cart">
-              <a href="#" class="main-menu__link main-menu__link--cart">Корзина: <span class="cart__state">пока пуста</span></a>
+              <a class="main-menu__link main-menu__link--cart" href="#">Корзина: <span class="cart__state">пока пуста</span></a>
             </li>
           </ul>
         </div>
@@ -38,7 +38,7 @@
     </header>
     <section class="promo">
       <div class="promo__header">
-        <h1 class="promo__title">Милые штуки ручной работы для дома</h1>
+        <h2 class="promo__title">Милые штуки ручной работы для дома</h2>
       </div>
       <div class="promo__categories">
         <ul class="categories">
@@ -52,7 +52,7 @@
       </div>
     </section>
     <article class="best-seller">
-      <h2 class="best-seller__title">Вязаные корзинки</h2>
+      <p class="best-seller__title">Вязаные корзинки</p>
       <strong class="best-seller__state">Товар недели</strong>
       <p class="best-seller__description">
         Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
@@ -78,7 +78,7 @@
       <a class="best-seller__order btn" href="#">Заказать</a>
     </article>
     <section class="features">
-      <h2>Коротко о нас:</h2>
+      <h3 class="features__title">Коротко о нас:</h3>
       <ul class="features__list">
         <li class="features__item features__item--ecological">Экологически чистые материалы</li>
         <li class="features__item features__item--price">Скандинавский стиль по российской цене</li>
@@ -90,7 +90,7 @@
     </section>
     <section class="reviews">
       <div class="reviews__container">
-        <h2 class="reviews__title">Отзывы</h2>
+        <h3 class="reviews__title">Отзывы</h3>
         <div class="reviews__items">
           <blockquote class="reviews__item">
             <p class="reviews__text">
@@ -133,29 +133,29 @@
             </li>
           </ul>
         </div>
-        <div class="copyright">
+        <div class="main-footer__copyright copyright">
           <span class="copyright__text">Разработано:</span>
           <a class="copyright__link" href="#">HTML Academy</a>
         </div>
       </div>
     </footer>
-    <form class="add-cart" action="#" method="get">
-      <h2 class="add-cart__title">Добавить в корзину</h2>
-      <p class="add-cart__description">Выберите размер:</p>
-      <div class="add-cart__sizes">
-        <p class="add-cart__size">
-          <input class="add-cart__radio" id="s-size" type="radio" name="size" value="s">
-          <label class="add-cart__label" for="s-size">S</label>
+    <form class="to-cart" action="#" method="get">
+      <div class="to-cart__title">Добавить в корзину</div>
+      <p class="to-cart__description">Выберите размер:</p>
+      <div class="to-cart__sizes">
+        <p class="to-cart__size">
+          <input class="to-cart__radio" id="s-size" type="radio" name="size" value="s">
+          <label class="to-cart__label" for="s-size">S</label>
         </p>
-        <p class="add-cart__size">
-          <input class="add-cart__radio" id="m-size" type="radio" name="size" value="m">
-          <label class="add-cart__label" for="m-size">M</label>
+        <p class="to-cart__size">
+          <input class="to-cart__radio" id="m-size" type="radio" name="size" value="m">
+          <label class="to-cart__label" for="m-size">M</label>
         </p>
-        <p class="add-cart__size">
-          <input class="add-cart__radio" id="l-size" type="radio" name="size" value="l">
-          <label class="add-cart__label" for="l-size">L</label>
+        <p class="to-cart__size">
+          <input class="to-cart__radio" id="l-size" type="radio" name="size" value="l">
+          <label class="to-cart__label" for="l-size">L</label>
         </p>
-        <button class="add-cart__submit" type="submit">Добавить</button>
+        <button class="to-cart__submit" type="submit">Добавить</button>
       </div>
     </form>
   </body>
