--- a/index.html
+++ b/index.html
@@ -8,77 +8,66 @@
   </head>
   <body>
     <header class="main-header">
-      <h1 class="visualy-hidden">Итернет-магазин "Мишка"</h1>
-      <a class="logo">
-        <img src="#" alt="Мишка">
-      </a>
-      <nav class="main-menu main-menu--closed main-menu--nojs">
-        <span class="main-menu__toggle main-menu__toggle--close"><!-- --></span>
-        <div class="main-menu__conteiner">
-          <ul class="main-menu__list">
-            <li class="main-menu__item">
-              <a class="main-menu__link" href="catalog.html">Каталог товаров</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href="form.html">Вязание на заказ</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link main-menu__link--search" href="#">Поиск по сайту</a>
-            </li>
-            <!-- Тут добавил еще один независимый блок cart, чтобы на него навесить логику смену состояния корзины,
-                может еще где-то пригодится.
-                А внешний вид конкретно для меню - это main-menu__item и main-menu__link.
-            -->
-            <li class="main-menu__item cart">
-              <a class="main-menu__link main-menu__link--cart" href="#">Корзина: <span class="cart__state">пока пуста</span></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="main-header__top">
+        <a class="logo">
+          <img class="logo__img" src="http://placehold.it/86x35" alt="Мишка" width="86" height="35">
+        </a>
+        <nav class="main-menu main-menu--closed main-menu--nojs">
+          <button class="main-menu__toggle main-menu__toggle--close" type="button">Открыть меню</button>
+          <div class="main-menu__container">
+            <ul class="main-menu__list">
+              <li class="main-menu__item">
+                <a class="main-menu__link" href="catalog.html">Каталог товаров</a>
+              </li>
+              <li class="main-menu__item">
+                <a class="main-menu__link" href="form.html">Вязание на заказ</a>
+              </li>
+              <li class="main-menu__item">
+                <a class="main-menu__link main-menu__link--search" href="#">Поиск по сайту</a>
+              </li>
+              <li class="main-menu__item">
+                <a class="main-menu__link main-menu__link--cart" href="#">Корзина: <span>пока пуста</span></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <section class="promo">
-      <div class="promo__header">
-        <h2 class="promo__title">Милые штуки ручной работы для дома</h2>
-      </div>
+      <h1 class="promo__title">Милые штуки ручной работы для дома</h1>
       <div class="promo__categories">
-        <ul class="categories">
-          <li class="categories__item categories__item--interior">
-            <a class="categories__link">Предметы интерьера</a>
-          </li>
-          <li class="categories__item categories__item--toys">
-            <a class="categories__link">Детские игрушки</a>
-          </li>
-        </ul>
+        <a class="promo__link promo__link--interior">Предметы интерьера</a>
+        <a class="promo__link promo__link--toys">Детские игрушки</a>
       </div>
     </section>
-    <article class="best-seller">
-      <p class="best-seller__title">Вязаные корзинки</p>
-      <strong class="best-seller__state">Товар недели</strong>
+    <section class="best-seller">
+      <h2 class="best-seller__title">Вязаные корзинки</h2>
+      <b class="best-seller__state">Товар недели</b>
       <p class="best-seller__description">
         Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.
       </p>
       <table class="best-seller__table">
         <tr class="best-seller__table-row">
-          <td class="best-seller__field">Цвет</td>
-          <td class="best-seller__value">«Тиффани»/серый</td>
+          <td class="best-seller__table-cell">Цвет</td>
+          <td class="best-seller__table-cell best-seller__table-cell--value">«Тиффани»/серый</td>
         </tr>
         <tr class="best-seller__table-row">
-          <td class="best-seller__field">Диаметр</td>
-          <td class="best-seller__value">25 см</td>
+          <td class="best-seller__table-cell">Диаметр</td>
+          <td class="best-seller__table-cell best-seller__table-cell--value">25 см</td>
         </tr>
         <tr class="best-seller__table-row">
-          <td class="best-seller__field">Высота</td>
-          <td class="best-seller__value">15 см</td>
+          <td class="best-seller__table-cell">Высота</td>
+          <td class="best-seller__table-cell best-seller__table-cell--value">15 см</td>
         </tr>
       </table>
-      <div class="best-seller__img">
-        <img src="#" alt="Вязаные корзинки">
+      <div class="best-seller__image">
+        <img src="http://placehold.it/260x315" alt="Вязаные корзинки" width="260" height="315">
       </div>
-      <p class="best-seller__price">Цена: 990руб.</p>
+      <div class="best-seller__price">Цена: 990руб.</div>
       <a class="best-seller__order btn" href="#">Заказать</a>
-    </article>
+    </section>
     <section class="features">
-      <h3 class="features__title">Коротко о нас:</h3>
+      <h2 class="features__title">Коротко о нас:</h2>
       <ul class="features__list">
         <li class="features__item features__item--ecological">Экологически чистые материалы</li>
         <li class="features__item features__item--price">Скандинавский стиль по российской цене</li>
@@ -90,73 +79,70 @@
     </section>
     <section class="reviews">
       <div class="reviews__container">
-        <h3 class="reviews__title">Отзывы</h3>
+        <h2 class="reviews__title">Отзывы</h2>
         <div class="reviews__items">
           <blockquote class="reviews__item">
             <p class="reviews__text">
               Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
             </p>
-            <cite class="reviews__author">Анастасия Красильникова</cite>
-            <a class="reviews__link" href="#">@misssssiskras</a>
+            <cite class="reviews__author">Анастасия Красильникова <span class="reviews__author-contact">@misssssiskras</span></cite>
           </blockquote>
           <!-- Ещё слайды -->
         </div>
-        <span class="reviews__btn reviews__btn--prev"><!-- --></span>
-        <span class="reviews__btn reviews__btn--next"><!-- --></span>
-        <a class="reviews__write" href="#">Написать</a>
+        <div class="reviews__btns">
+          <button class="reviews__btn reviews__btn--prev" type="button"><!-- --></button>
+          <button class="reviews__btn reviews__btn--next" type="button"><!-- --></button>
+        </div>
+        <a class="reviews__write btn" href="#">Написать</a>
       </div>
     </section>
     <section class="contacts">
-      <p class="contacts__item">
+      <h2 class="contacts__title"></h2>
+      <div class="contacts__item">
         <span class="contacts__field">email</span>
-        <span class="contacts__text">info@mimimishkashop.ru</span>
-      </p>
-      <p class="contacts__item">
+        <a class="contacts__text" href="#">info@mimimishkashop.ru</a>
+      </div>
+      <div class="contacts__item">
         <span class="contacts__field">адрес</span>
         <span class="contacts__text">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</span>
-      </p>
+      </div>
       <div class="map"></div>
-      <a class="contacts__write btn" href="#"></a>
+      <a class="contacts__write btn" href="#">Напишите нам</a>
     </section>
     <footer class="main-footer">
-      <div class="main-footer__container">
-        <div class="main-footer__social">
-          <ul class="social-links">
-            <li class="social-links__item">
-              <a class="social-link" href="#">Мы в Инстаграмме</a>
-            </li>
-            <li class="social-links__item">
-              <a class="social-link" href="#">Мы в Фейсбуке</a>
-            </li>
-            <li class="social-links__item">
-              <a class="social-link" href="#">Мы в Твиттере</a>
-            </li>
-          </ul>
+      <div class="main-footer__social">
+        <div class="social-links">
+          <a class="social-link social-link--insta" href="#">Мы в Инстаграмме</a>
+          <a class="social-link social-link--fb" href="#">Мы в Фейсбуке</a>
+          <a class="social-link social-link--tw" href="#">Мы в Твиттере</a>
         </div>
-        <div class="main-footer__copyright copyright">
-          <span class="copyright__text">Разработано:</span>
-          <a class="copyright__link" href="#">HTML Academy</a>
-        </div>
+      </div>
+      <div class="main-footer__copyright">
+        <span class="main-footer__copyright-text">Разработано:</span>
+        <a class="main-footer__copyright-link" href="#">HTML Academy</a>
       </div>
     </footer>
-    <form class="to-cart" action="#" method="get">
-      <div class="to-cart__title">Добавить в корзину</div>
-      <p class="to-cart__description">Выберите размер:</p>
-      <div class="to-cart__sizes">
-        <p class="to-cart__size">
-          <input class="to-cart__radio" id="s-size" type="radio" name="size" value="s">
-          <label class="to-cart__label" for="s-size">S</label>
-        </p>
-        <p class="to-cart__size">
-          <input class="to-cart__radio" id="m-size" type="radio" name="size" value="m">
-          <label class="to-cart__label" for="m-size">M</label>
-        </p>
-        <p class="to-cart__size">
-          <input class="to-cart__radio" id="l-size" type="radio" name="size" value="l">
-          <label class="to-cart__label" for="l-size">L</label>
-        </p>
-        <button class="to-cart__submit" type="submit">Добавить</button>
-      </div>
-    </form>
+
+    <div class="modal modal--open">
+      <div class="modal__title">Добавить в корзину</div>
+      <p class="modal__description">Выберите размер:</p>
+      <form class="to-cart" action="#" method="get">
+        <div class="to-cart__sizes">
+          <p class="to-cart__size">
+            <input class="to-cart__radio" id="s-size" type="radio" name="size" value="s">
+            <label class="to-cart__label" for="s-size">S</label>
+          </p>
+          <p class="to-cart__size">
+            <input class="to-cart__radio" id="m-size" type="radio" name="size" value="m">
+            <label class="to-cart__label" for="m-size">M</label>
+          </p>
+          <p class="to-cart__size">
+            <input class="to-cart__radio" id="l-size" type="radio" name="size" value="l">
+            <label class="to-cart__label" for="l-size">L</label>
+          </p>
+        </div>
+        <button class="to-cart__submit btn" type="submit">Добавить</button>
+      </form>
+    </div>
   </body>
 </html>
